--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.glassfish>4.0</version.glassfish>
-        <version.oltu>1.0.0-SNAPSHOT</version.oltu>
+        <version.oltu>1.0.1</version.oltu><!--1.0.0-SNAPSHOT-->
     </properties>
     
     <dependencyManagement>
@@ -86,6 +86,11 @@
             <version>2.0</version>
             <scope>test</scope>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.3.8</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
